Refactor views to add partials and before_action methods in controllers

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -2,6 +2,8 @@
 <p>Add a new song for <%= @artist.name %></p>
 
 <%= form_for [@artist, @song] do |f| %>
+  <%= render partial: "shared/errors", locals: {target: @song} %>
+
   <%= f.label :title, "Song Title" %>
   <%= f.text_field :title %>
 
